--- a/changelog
+++ b/changelog
@@ -1,3 +1,20 @@
+turnkey-vtiger-12.1 (1) turnkey; urgency=low
+
+  * Vtiger:
+
+    - Enable and set php max_input_vars to 1500 (closes LP#1052806).
+
+  * Added phpsh (interative shell for PHP) and php5-cli (generically useful).
+
+  * Hardcoded component versions:
+
+    vtigercrm       5.4.0
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Alon Swartz <alon@turnkeylinux.org>  Fri, 05 Apr 2013 08:00:00 +0200
+
 turnkey-vtiger-12.0 (1) turnkey; urgency=low
 
   * Vtiger: Upgraded to latest upstream archive.
