--- a/changelog
+++ b/changelog
@@ -6,7 +6,7 @@ turnkey-vtiger-12.1 (1) turnkey; urgency=low
 
   * Added phpsh (interative shell for PHP) and php5-cli (generically useful).
 
-  * Hardcoded component versions:
+  * Upstream source component versions:
 
     vtigercrm       5.4.0
 
