--- a/changelog
+++ b/changelog
@@ -38,6 +38,10 @@ turnkey-vtiger-12.1 (1) turnkey; urgency=low
 
     vtigercrm       5.4.0
 
+  * Replaced PHPMyAdmin with Adminer
+
+  * Hardened default SSL settings
+
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
 
