--- a/changelog
+++ b/changelog
@@ -2,6 +2,8 @@ turnkey-vtiger-14.2 (1) turnkey; urgency=low
 
   * Updated to new version of Vtiger (6.5.0).
 
+  * Updated Adminer to 4.2.5
+
   * Installed security updates.
 
   * Note: Please refer to turnkey-core's changelog for changes common to all
