--- a/changelog
+++ b/changelog
@@ -1,3 +1,14 @@
+turnkey-vtiger-15.0 (1) turnkey; urgency=low
+
+  * Install Adminer directly from stretch/main repo
+
+  * Replace MySQL with MariaDB
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specdific to this appliance.
+
+ -- Vlad Kuzmenko <vlad.work.here@gmail.com>  Thu, 13 Mar 2018 03:35:42 +0200
+
 turnkey-vtiger-14.2 (1) turnkey; urgency=low
 
   * Updated to new version of Vtiger (6.5.0).
