--- a/changelog
+++ b/changelog
@@ -19,7 +19,7 @@ turnkey-vtiger-15.0 (1) turnkey; urgency=low
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
 
- -- Vlad Kuzmenko <vlad.work.here@gmail.com>  Thu, 26 Jul 2018 03:35:42 +0200
+ -- Vlad Kuzmenko <vlad@turnkeylinux.org>  Thu, 26 Jul 2018 03:35:42 +0200
 
 turnkey-vtiger-14.2 (1) turnkey; urgency=low
 
